# tinytris

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE-sha1  README.MD  block.h  config.ini  game_config.h  game_data.h  game_types.h  input_utils.h  linecollapse.h  main.c  ready.h  rng.h  timings-000-TAPMasterFade.ini  timings-000-TGM1-Master.ini  timings-001-TAPMasterM.ini  timings-001-TGM2-Master.ini  timings-002-TAPDeath.ini  timings-002-TGM2-Death.ini  timings-003-TGM2-Plus.ini  timings-004-TGM3-Shirase.ini  timings-010-TGM1-Fading.ini  timings-011-TGM2-Master-No-M-Roll.ini  timings-012-Frozen-Death.ini  timings-013-TGM2-Items.ini  timings.ini  timings.template  vcpkg.json
.github/workflows/: ci.yml  cmake-multi-platform.yml
assets/: atlas.afphoto  icon.rc
src/: game_config.h  game_data.h  game_types.h  main.c  sha1.c  sha1.h
src/assets/: atlas.h  block.h  bone.h  border.h  combo.h  complete.h  gameover.h  go.h  hold.h  i_mino.h  irs.h  j_mino.h  l_mino.h  lineclear.h  linecollapse.h  move.h  next_hold.h  o_mino.h  pieceland.h  piecelock.h  ready.h  s_mino.h  section_lock.h  section_pass.h  t_mino.h  tetris.h  tetris_b2b.h  z_mino.h
